Perparations for adding fabric.js

--- a/src/htmltests/BoxDisplayTest.html
+++ b/src/htmltests/BoxDisplayTest.html
@@ -1,8 +1,9 @@
 <html>
-  <head>
-    <title> Box Display Test </title>
-    <script type="text/javascript" src="../libs/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="../libs/raphael-min.js"></script>
+<head>
+<title> Box Display Test </title>
+<script type="text/javascript" src="../libs/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="../libs/raphael-min.js"></script>
+<script type="text/javascript" src="../libs/fabric.all.min.js"></script>
 
 <!-- <script type="text/javascript" src="testdata/sgfs.js"></script> -->
 
