--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="../libs/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="../libs/raphael-min.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
+<script type="text/javascript" src="../libs/fabric.all.min.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
@@ -101,6 +102,7 @@
 <script type="text/javascript" src="../controllers/base_controller_test.js"></script>
 <script type="text/javascript" src="../controllers/controllers_test.js"></script>
 <script type="text/javascript" src="../controllers/static_problem_study_test.js"></script>
+
 <!-- Bridge Tests -->
 <script type="text/javascript" src="../bridge/cropping_test.js"></script>
 
