--- a/src/htmltests/RealBoardTest.html
+++ b/src/htmltests/RealBoardTest.html
@@ -3,6 +3,7 @@
     <title> RealBoardTest </title>
     <script type="text/javascript" src="../libs/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="../libs/raphael-min.js"></script>
+    <script type="text/javascript" src="../libs/fabric.min.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
