--- a/src/htmltests/SeriesTester.html
+++ b/src/htmltests/SeriesTester.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="../libs/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="../libs/raphael-min.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
+<script type="text/javascript" src="../libs/fabric.all.min.js"></script>
 
 <link href="testlibs/bootstrap/css/bootstrap.css" rel="stylesheet">
 <link href="testlibs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
