--- a/src/htmltests/SeriesTester.html
+++ b/src/htmltests/SeriesTester.html
@@ -7,8 +7,8 @@
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
 <script type="text/javascript" src="../libs/fabric.all.min.js"></script>
 
-<link href="testlibs/bootstrap/css/bootstrap.css" rel="stylesheet">
-<link href="testlibs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+<!-- <link href="testlibs/bootstrap/css/bootstrap.css" rel="stylesheet"> -->
+<!-- <link href="testlibs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet"> -->
 
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
