--- a/src/htmltests/RealBoardTest.html
+++ b/src/htmltests/RealBoardTest.html
@@ -40,13 +40,13 @@
 <script type="text/javascript" src="../displays/board/starpoints.js"></script>
 <script type="text/javascript" src="../displays/board/stone.js"></script>
 <script type="text/javascript" src="../displays/board/stones.js"></script>
+<script type="text/javascript" src="../displays/board/svgutil.js"></script>
 <!-- Displays raphael -->
 <script type="text/javascript" src="../displays/raphael/raphael.js"></script>
 <script type="text/javascript" src="../displays/raphael/buttons.js"></script>
 <script type="text/javascript" src="../displays/raphael/icons.js"></script>
 <script type="text/javascript" src="../displays/raphael/mark.js"></script>
 <script type="text/javascript" src="../displays/raphael/position.js"></script>
-<script type="text/javascript" src="../displays/raphael/util.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
