--- a/src/htmltests/BoxDisplayTest.html
+++ b/src/htmltests/BoxDisplayTest.html
@@ -38,7 +38,8 @@
 <!-- Displays board -->
 <script type="text/javascript" src="../displays/board/board.js"></script>
 <script type="text/javascript" src="../displays/board/board_base.js"></script>
-<script type="text/javascript" src="../displays/board/intersection_line.js"></script>
+<script type="text/javascript" src="../displays/board/lines.js"></script>
+<script type="text/javascript" src="../displays/board/marks.js"></script>
 <script type="text/javascript" src="../displays/board/starpoints.js"></script>
 <script type="text/javascript" src="../displays/board/stone.js"></script>
 <script type="text/javascript" src="../displays/board/stones.js"></script>
