Finish with buttons. Woo hoo!  Basic go board is implemented.

--- a/src/htmltests/BoxDisplayTest.html
+++ b/src/htmltests/BoxDisplayTest.html
@@ -38,10 +38,11 @@
 <!-- Displays board -->
 <script type="text/javascript" src="../displays/board/board.js"></script>
 <script type="text/javascript" src="../displays/board/board_base.js"></script>
+<script type="text/javascript" src="../displays/board/buttons.js"></script>
+<script type="text/javascript" src="../displays/board/intersections.js"></script>
 <script type="text/javascript" src="../displays/board/lines.js"></script>
 <script type="text/javascript" src="../displays/board/marks.js"></script>
 <script type="text/javascript" src="../displays/board/starpoints.js"></script>
-<script type="text/javascript" src="../displays/board/stone.js"></script>
 <script type="text/javascript" src="../displays/board/stones.js"></script>
 <script type="text/javascript" src="../displays/board/svgutil.js"></script>
 <!-- Displays raphael -->
