Adding events back in.

--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -3,7 +3,7 @@
 
 <title> ProblemTester </title>
 <script type="text/javascript" src="../libs/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="../libs/raphael-min.js"></script>
+<script type="text/javascript" src="../libs/d3.min.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
