Added marks support. Probably will have to be rewritten to use grouped elements.

--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<title> ProblemTester </title>
+<title> MarksTester </title>
 <script type="text/javascript" src="../libs/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="../libs/d3.min.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
