Finishing up the marks code

--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -127,7 +127,8 @@
           sgfString: testdata.sgfs.marktest,
           divId: "glift_display1",
           theme: "DEPTH",
-          goBoardBackground: '../themes/assets/bambootile_warm.jpg'
+          goBoardBackground: '../themes/assets/bambootile_warm.jpg',
+          boardRegion: 'TOP_RIGHT'
         });
       </script>
     </div>
