--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -130,6 +130,12 @@
           goBoardBackground: '../themes/assets/bambootile_warm.jpg',
           boardRegion: 'TOP_RIGHT'
         });
+        basicProblem.display.intersections()
+            .addMark(9, 0, "STONE_MARKER");
+        basicProblem.display.intersections()
+            .addMark(9, 1, "STONE_MARKER");
+        basicProblem.display.intersections()
+            .addMark(9, 2, "STONE_MARKER");
       </script>
     </div>
   </body>
