Removing some raphael code.  Updating depgen.py

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -53,7 +53,6 @@
 <script type="text/javascript" src="../displays/displays.js"></script>
 <script type="text/javascript" src="../displays/bbox.js"></script>
 <script type="text/javascript" src="../displays/board_points.js"></script>
-<script type="text/javascript" src="../displays/center.js"></script>
 <script type="text/javascript" src="../displays/cropbox.js"></script>
 <script type="text/javascript" src="../displays/environment.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
@@ -69,11 +68,11 @@
 <script type="text/javascript" src="../displays/board/starpoints.js"></script>
 <script type="text/javascript" src="../displays/board/stones.js"></script>
 <script type="text/javascript" src="../displays/board/svgutil.js"></script>
-<!-- Displays raphael -->
-<script type="text/javascript" src="../displays/raphael/raphael.js"></script>
-<script type="text/javascript" src="../displays/raphael/buttons.js"></script>
-<script type="text/javascript" src="../displays/raphael/icons.js"></script>
-<script type="text/javascript" src="../displays/raphael/position.js"></script>
+<!-- Displays gui -->
+<script type="text/javascript" src="../displays/gui/gui.js"></script>
+<script type="text/javascript" src="../displays/gui/center.js"></script>
+<script type="text/javascript" src="../displays/gui/icons.js"></script>
+<script type="text/javascript" src="../displays/gui/position.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
@@ -109,12 +108,13 @@
 <!-- Displays Tests -->
 <script type="text/javascript" src="../displays/bbox_test.js"></script>
 <script type="text/javascript" src="../displays/board_points_test.js"></script>
-<script type="text/javascript" src="../displays/center_test.js"></script>
 <script type="text/javascript" src="../displays/cropbox_test.js"></script>
 <script type="text/javascript" src="../displays/environment_test.js"></script>
 <script type="text/javascript" src="../displays/resized_box_test.js"></script>
 <!-- Displays board Tests -->
 <script type="text/javascript" src="../displays/board/board_test.js"></script>
+<!-- Displays gui Tests -->
+<script type="text/javascript" src="../displays/gui/center_test.js"></script>
 <!-- Rules Tests -->
 <script type="text/javascript" src="../rules/goban_test.js"></script>
 <script type="text/javascript" src="../rules/intersections_test.js"></script>
@@ -142,8 +142,10 @@ $(document).ready(function() {
   glift.displays.environmentTest();
   glift.displays.boardpointsTest();
   glift.displays.resizedBoxTest();
-  //glift.displays.boardTest();
-  glift.displays.centerTest();
+
+  // TODO(kashomon): recreate the board tests.  Right now, the test relies on
+  // the old Raphael code
+  // glift.displays.boardTest();
 
   glift.rules.movetreeTest();
   glift.rules.treepathTest();
@@ -154,6 +156,8 @@ $(document).ready(function() {
   glift.controllers.baseControllerTest();
   glift.controllers.staticProblemStudyTest();
   glift.controllers.controllersTest();
+
+  glift.displays.gui.centerTest();
 
   // API tests
   glift.gliftTest();
