--- a/src/htmltests/BboxFinder.html
+++ b/src/htmltests/BboxFinder.html
@@ -29,7 +29,6 @@
 <script type="text/javascript" src="../displays/displays.js"></script>
 <script type="text/javascript" src="../displays/bbox.js"></script>
 <script type="text/javascript" src="../displays/board_points.js"></script>
-<script type="text/javascript" src="../displays/center.js"></script>
 <script type="text/javascript" src="../displays/cropbox.js"></script>
 <script type="text/javascript" src="../displays/environment.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
@@ -45,11 +44,11 @@
 <script type="text/javascript" src="../displays/board/starpoints.js"></script>
 <script type="text/javascript" src="../displays/board/stones.js"></script>
 <script type="text/javascript" src="../displays/board/svgutil.js"></script>
-<!-- Displays raphael -->
-<script type="text/javascript" src="../displays/raphael/raphael.js"></script>
-<script type="text/javascript" src="../displays/raphael/buttons.js"></script>
-<script type="text/javascript" src="../displays/raphael/icons.js"></script>
-<script type="text/javascript" src="../displays/raphael/position.js"></script>
+<!-- Displays gui -->
+<script type="text/javascript" src="../displays/gui/gui.js"></script>
+<script type="text/javascript" src="../displays/gui/center.js"></script>
+<script type="text/javascript" src="../displays/gui/icons.js"></script>
+<script type="text/javascript" src="../displays/gui/position.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
@@ -85,12 +84,13 @@
 <!-- Displays Tests -->
 <script type="text/javascript" src="../displays/bbox_test.js"></script>
 <script type="text/javascript" src="../displays/board_points_test.js"></script>
-<script type="text/javascript" src="../displays/center_test.js"></script>
 <script type="text/javascript" src="../displays/cropbox_test.js"></script>
 <script type="text/javascript" src="../displays/environment_test.js"></script>
 <script type="text/javascript" src="../displays/resized_box_test.js"></script>
 <!-- Displays board Tests -->
 <script type="text/javascript" src="../displays/board/board_test.js"></script>
+<!-- Displays gui Tests -->
+<script type="text/javascript" src="../displays/gui/center_test.js"></script>
 <!-- Rules Tests -->
 <script type="text/javascript" src="../rules/goban_test.js"></script>
 <script type="text/javascript" src="../rules/intersections_test.js"></script>
@@ -110,6 +110,17 @@
 <script type="text/javascript">
 (function() {
   console.log("foom!");
+  for (var key in glift.displays.gui.icons) {
+    var pathobj = paper.path(glift.displays.gui.icons[key]);
+    var bbox = pathobj.getBBox();
+    console.log(
+        "x: " + bbox.x + ",\n" +
+        "y: " + bbox.y + ",\n" +
+        "x2: " + bbox.x2 + ",\n" +
+        "y2: " + bbox.y2 + ",\n" +
+        "height: " + bbox.y - bbox.y2 + ",\n" +
+        "width: " + bbox.x - bbox.x2);
+  };
 })();
 </script>
 </body>
