--- a/src/htmltests/IconBarTester.html
+++ b/src/htmltests/IconBarTester.html
@@ -3,8 +3,8 @@
 
 <title> IconBarTester </title>
 <script type="text/javascript" src="../libs/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="../libs/raphael-min.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
+<script type="text/javascript" src="../libs/d3.min.js"></script>
 
 <link href="testlibs/bootstrap/css/bootstrap.css" rel="stylesheet">
 <link href="testlibs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
@@ -18,7 +18,6 @@
 <script type="text/javascript" src="../util/enums.js"></script>
 <script type="text/javascript" src="../util/errors.js"></script>
 <script type="text/javascript" src="../util/id_generator.js"></script>
-<script type="text/javascript" src="../util/logger.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
 <script type="text/javascript" src="../util/point.js"></script>
 <script type="text/javascript" src="../util/regions.js"></script>
