--- a/src/htmltests/RealBoardTest.html
+++ b/src/htmltests/RealBoardTest.html
@@ -21,6 +21,9 @@
 <script type="text/javascript" src="../themes/themes.js"></script>
 <script type="text/javascript" src="../themes/default.js"></script>
 <script type="text/javascript" src="../themes/depth.js"></script>
+<script type="text/javascript" src="../themes/moody.js"></script>
+<script type="text/javascript" src="../themes/textbook.js"></script>
+<script type="text/javascript" src="../themes/transparent.js"></script>
 <!-- Displays -->
 <script type="text/javascript" src="../displays/displays.js"></script>
 <script type="text/javascript" src="../displays/bbox.js"></script>
