--- a/src/htmltests/IconBarTester.html
+++ b/src/htmltests/IconBarTester.html
@@ -68,15 +68,17 @@
 <script type="text/javascript" src="../sgf/sgf_grammar.js"></script>
 <!-- Controllers -->
 <script type="text/javascript" src="../controllers/controllers.js"></script>
-<script type="text/javascript" src="../controllers/base_controller.js"></script>
+<script type="text/javascript" src="../controllers/base.js"></script>
+<script type="text/javascript" src="../controllers/game_viewer.js"></script>
 <script type="text/javascript" src="../controllers/options.js"></script>
-<script type="text/javascript" src="../controllers/static_problem_study.js"></script>
+<script type="text/javascript" src="../controllers/static_problem.js"></script>
 <!-- Bridge -->
 <script type="text/javascript" src="../bridge/bridge.js"></script>
 <script type="text/javascript" src="../bridge/cropping.js"></script>
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/basic_problem.js"></script>
+<script type="text/javascript" src="../widgets/game_viewer.js"></script>
 <script type="text/javascript" src="../widgets/problem_series.js"></script>
 <!-- Otre Tests -->
 <script type="text/javascript" src=".././glift_test.js"></script>
@@ -103,9 +105,9 @@
 <script type="text/javascript" src="../rules/properties_test.js"></script>
 <script type="text/javascript" src="../rules/treepath_test.js"></script>
 <!-- Controllers Tests -->
-<script type="text/javascript" src="../controllers/base_controller_test.js"></script>
+<script type="text/javascript" src="../controllers/base_test.js"></script>
 <script type="text/javascript" src="../controllers/controllers_test.js"></script>
-<script type="text/javascript" src="../controllers/static_problem_study_test.js"></script>
+<script type="text/javascript" src="../controllers/static_problem_test.js"></script>
 <!-- Bridge Tests -->
 <script type="text/javascript" src="../bridge/cropping_test.js"></script>
 
