--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -2,7 +2,7 @@
 <head>
 
 <title> MarksTester </title>
-<script type="text/javascript" src="../libs/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="../libs/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="../libs/d3.min.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
 
@@ -104,6 +104,7 @@
 <!-- Controllers Tests -->
 <script type="text/javascript" src="../controllers/base_test.js"></script>
 <script type="text/javascript" src="../controllers/controllers_test.js"></script>
+<script type="text/javascript" src="../controllers/game_viewer_test.js"></script>
 <script type="text/javascript" src="../controllers/static_problem_test.js"></script>
 <!-- Bridge Tests -->
 <script type="text/javascript" src="../bridge/cropping_test.js"></script>
