--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -3,9 +3,8 @@
 <html>
 <head>
 
-<script type="text/javascript" src="../libs/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="../libs/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="../libs/d3.min.js"></script>
-<!-- <script type="text/javascript" src="../libs/raphael-min.js"></script> -->
 <link rel="stylesheet" href="../qunit/qunit.css" type="text/css" media="screen" />
 <script type="text/javascript" src="../qunit/qunit.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
@@ -129,6 +128,7 @@
 <!-- Controllers Tests -->
 <script type="text/javascript" src="../controllers/base_test.js"></script>
 <script type="text/javascript" src="../controllers/controllers_test.js"></script>
+<script type="text/javascript" src="../controllers/game_viewer_test.js"></script>
 <script type="text/javascript" src="../controllers/static_problem_test.js"></script>
 <!-- Bridge Tests -->
 <script type="text/javascript" src="../bridge/cropping_test.js"></script>
@@ -161,6 +161,7 @@ $(document).ready(function() {
   glift.controllers.baseTest();
   glift.controllers.staticProblemTest();
   glift.controllers.controllersTest();
+  glift.controllers.gameViewerTest();
 
   glift.displays.gui.centerTest();
   glift.displays.gui.splitTest();
