--- a/src/htmltests/RealBoardTest.html
+++ b/src/htmltests/RealBoardTest.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> RealBoardTest </title>
-    <script type="text/javascript" src="../libs/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="../libs/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="../libs/raphael-min.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
@@ -102,6 +102,7 @@
 <!-- Controllers Tests -->
 <script type="text/javascript" src="../controllers/base_test.js"></script>
 <script type="text/javascript" src="../controllers/controllers_test.js"></script>
+<script type="text/javascript" src="../controllers/game_viewer_test.js"></script>
 <script type="text/javascript" src="../controllers/static_problem_test.js"></script>
 <!-- Bridge Tests -->
 <script type="text/javascript" src="../bridge/cropping_test.js"></script>
