Added key_mappings utility, comment_box, and a new base_widget.

--- a/src/htmltests/RealBoardTest.html
+++ b/src/htmltests/RealBoardTest.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="../util/enums.js"></script>
 <script type="text/javascript" src="../util/errors.js"></script>
 <script type="text/javascript" src="../util/id_generator.js"></script>
+<script type="text/javascript" src="../util/key_mappings.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
 <script type="text/javascript" src="../util/point.js"></script>
 <script type="text/javascript" src="../util/regions.js"></script>
@@ -45,7 +46,9 @@
 <script type="text/javascript" src="../displays/board/svgutil.js"></script>
 <!-- Displays gui -->
 <script type="text/javascript" src="../displays/gui/gui.js"></script>
+<script type="text/javascript" src="../displays/gui/box_container.js"></script>
 <script type="text/javascript" src="../displays/gui/center.js"></script>
+<script type="text/javascript" src="../displays/gui/comment_box.js"></script>
 <script type="text/javascript" src="../displays/gui/icon_bar.js"></script>
 <script type="text/javascript" src="../displays/gui/icons.js"></script>
 <script type="text/javascript" src="../displays/gui/position.js"></script>
@@ -72,9 +75,11 @@
 <script type="text/javascript" src="../bridge/cropping.js"></script>
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
+<script type="text/javascript" src="../widgets/base_widget.js"></script>
 <script type="text/javascript" src="../widgets/basic_problem.js"></script>
 <script type="text/javascript" src="../widgets/game_viewer.js"></script>
 <script type="text/javascript" src="../widgets/problem_series.js"></script>
+<script type="text/javascript" src="../widgets/problem_service.js"></script>
 <!-- Otre Tests -->
 <script type="text/javascript" src=".././glift_test.js"></script>
 <!-- Util Tests -->
