--- a/src/htmltests/BaseWidgetTest.html
+++ b/src/htmltests/BaseWidgetTest.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<title> SeriesTester </title>
+<title> BaseWidgetTest </title>
 <script type="text/javascript" src="../libs/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
 <script type="text/javascript" src="../libs/d3.min.js"></script>
@@ -121,16 +121,9 @@
         margin: 0;
         padding: 0;
       }
-      #wrap {
-        width: 100%;
-        height: 100%;
-      }
-      #glift_display {
-        position:absolute;
-        top: 10;
-        bottom: 10;
-        left: 10;
-        right: 10;
+      #glift_display1 {
+        height:100%;
+        position:relative;
       }
     </style>
   </head>
@@ -138,23 +131,14 @@
   <body>
     <div id="wrap" style="position:relative;">
       <div id="gheader"></div>
-      <div id="glift_display"></div>
+      <div id="glift_display1"></div>
       <div id="extra_info"></div>
       <script type="text/javascript">
-        (function() {
-          var d = new Date();
-          var begin = d.getTime();
-          var basicProblem = glift.widgets.problemSeries({
-            //sgfString: testdata.sgfs.complexproblem,
-            divId: "glift_display",
-            theme: "DEPTH",
-            goBoardBackground: '../themes/assets/bambootile_warm.jpg'
-          });
-          var d = new Date();
-          var after = d.getTime();
-          console.log('---finished---');
-          console.log(after - begin);
-        })();
+        var basicWidget = glift.widgets.baseWidget({
+          sgfString: testdata.sgfs.complexproblem,
+          divId: "glift_display1",
+          //useCommentBar: false
+        });
       </script>
     </div>
   </body>
