Added support for variation numbers.

--- a/src/htmltests/IconBarTester.html
+++ b/src/htmltests/IconBarTester.html
@@ -106,6 +106,7 @@
 <!-- Rules Tests -->
 <script type="text/javascript" src="../rules/goban_test.js"></script>
 <script type="text/javascript" src="../rules/intersections_test.js"></script>
+<script type="text/javascript" src="../rules/movenode_test.js"></script>
 <script type="text/javascript" src="../rules/movetree_test.js"></script>
 <script type="text/javascript" src="../rules/properties_test.js"></script>
 <script type="text/javascript" src="../rules/treepath_test.js"></script>
