--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -127,6 +127,7 @@
 <!-- Rules Tests -->
 <script type="text/javascript" src="../rules/goban_test.js"></script>
 <script type="text/javascript" src="../rules/intersections_test.js"></script>
+<script type="text/javascript" src="../rules/movenode_test.js"></script>
 <script type="text/javascript" src="../rules/movetree_test.js"></script>
 <script type="text/javascript" src="../rules/properties_test.js"></script>
 <script type="text/javascript" src="../rules/treepath_test.js"></script>
@@ -158,6 +159,7 @@ $(document).ready(function() {
   // glift.displays.boardTest();
 
   glift.rules.movetreeTest();
+  glift.rules.movenodeTest();
   glift.rules.treepathTest();
   glift.rules.intersectionsTest();
   glift.rules.gobanTest();
