--- a/src/htmltests/BoxOrientation.html
+++ b/src/htmltests/BoxOrientation.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title> Box Display Test </title>
+
+<title> BoxOrientation </title>
 <script type="text/javascript" src="../libs/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="../libs/raphael-min.js"></script>
-
-<!-- <script type="text/javascript" src="testdata/sgfs.js"></script> -->
-
+<script type="text/javascript" src="../testdata/sgfs.js"></script>
+<script type="text/javascript" src="../testdata/gogameguru_commentary.js"></script>
+<script type="text/javascript" src="../libs/d3.min.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
@@ -79,7 +79,10 @@
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
 <script type="text/javascript" src="../widgets/basic_problem.js"></script>
-<script type="text/javascript" src="../widgets/default_options.js"></script>
+<!-- Widgets options -->
+<script type="text/javascript" src="../widgets/options/options.js"></script>
+<script type="text/javascript" src="../widgets/options/base.js"></script>
+<script type="text/javascript" src="../widgets/options/problem.js"></script>
 <!-- Otre Tests -->
 <script type="text/javascript" src=".././glift_test.js"></script>
 <!-- Util Tests -->
@@ -114,85 +117,32 @@
 <script type="text/javascript" src="../bridge/cropping_test.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
+
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
       #glift_display1 {
-        position: relative;
-        top: 0;
-        width: 400px;
-        height: 400px;
-        float: left;
-      }
-      #glift_display2 {
-        position: relative;
-        top: 0;
-        width: 300px;
-        height: 400px;
-        float: left;
-      }
-      #glift_display3 {
-        position: relative;
-        top: 0;
-        width: 400px;
-        height: 300px;
-        float: left;
-      }
-      #glift_display4 {
-        position: relative;
-        top: 0;
-        width: 400px;
-        height: 300px;
-        float: left;
-      }
-      #glift_display5 {
-        position: relative;
-        top: 0;
-        width: 400px;
-        height: 300px;
-        float: left;
+        height:100%;
+        position:relative;
       }
     </style>
   </head>
 
   <body>
     <div id="wrap" style="position:relative;">
-      <div id="glift_display1">
-      <div id="glift_display2">
-      <div id="glift_display3">
-      <div id="glift_display4">
-      <div id="glift_display5">
-        <script type="text/javascript">
-          var boardRegions = glift.enums.boardRegions;
-          logz = glift.util.logz;
-
-          var env1 = glift.displays.environment.getInitialized({
-            divId: "glift_display1",
-          });
-          env1._debugDrawAll();
-
-          var env2 = glift.displays.environment.getInitialized({
-            divId: "glift_display2",
-          });
-          env2._debugDrawAll();
-
-          var env3 = glift.displays.environment.getInitialized({
-            divId: "glift_display3",
-          });
-          env3._debugDrawAll();
-
-          var env4 = glift.displays.environment.getInitialized({
-            divId: "glift_display4",
-            boardRegion: boardRegions.LEFT
-          });
-          env4._debugDrawAll();
-
-          var env5 = glift.displays.environment.getInitialized({
-            divId: "glift_display5",
-            boardRegion: boardRegions.TOP_LEFT
-          });
-          env5._debugDrawAll();
-        </script>
-      </div>
+      <div id="gheader"></div>
+      <div id="glift_display1"></div>
+      <div id="extra_info"></div>
+      <script type="text/javascript">
+        gameViewer = glift.widgets.baseWidget({
+          sgfString: testdata.gogameguru_commentary,
+          theme: 'DEPTH',
+          goBoardBackground: '../themes/assets/bambootile_warm.jpg',
+          divId: "glift_display1"
+        });
+      </script>
     </div>
   </body>
 </html>
-
