--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -79,7 +79,10 @@
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
 <script type="text/javascript" src="../widgets/basic_problem.js"></script>
-<script type="text/javascript" src="../widgets/default_options.js"></script>
+<!-- Widgets options -->
+<script type="text/javascript" src="../widgets/options/options.js"></script>
+<script type="text/javascript" src="../widgets/options/base.js"></script>
+<script type="text/javascript" src="../widgets/options/problem.js"></script>
 <!-- Otre Tests -->
 <script type="text/javascript" src=".././glift_test.js"></script>
 <!-- Util Tests -->
