Adding the base code to support 'Passing'

--- a/src/htmltests/IconBarTester.html
+++ b/src/htmltests/IconBarTester.html
@@ -56,6 +56,7 @@
 <script type="text/javascript" src="../displays/gui/icon_bar.js"></script>
 <script type="text/javascript" src="../displays/gui/icons.js"></script>
 <script type="text/javascript" src="../displays/gui/position.js"></script>
+<script type="text/javascript" src="../displays/gui/split.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
@@ -110,6 +111,8 @@
 <script type="text/javascript" src="../rules/movetree_test.js"></script>
 <script type="text/javascript" src="../rules/properties_test.js"></script>
 <script type="text/javascript" src="../rules/treepath_test.js"></script>
+<!-- Sgf Tests -->
+<script type="text/javascript" src="../sgf/sgf_parser_test.js"></script>
 <!-- Controllers Tests -->
 <script type="text/javascript" src="../controllers/base_test.js"></script>
 <script type="text/javascript" src="../controllers/controllers_test.js"></script>
@@ -132,7 +135,7 @@
       #glift_display {
         position:absolute;
         background-color: cyan;
-        top: 10;
+        top: 200;
         height: 100;
         left: 100;
         right: 100;
