--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -54,6 +54,7 @@
 <script type="text/javascript" src="../displays/gui/icon_bar.js"></script>
 <script type="text/javascript" src="../displays/gui/icons.js"></script>
 <script type="text/javascript" src="../displays/gui/position.js"></script>
+<script type="text/javascript" src="../displays/gui/split.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
@@ -108,6 +109,8 @@
 <script type="text/javascript" src="../rules/movetree_test.js"></script>
 <script type="text/javascript" src="../rules/properties_test.js"></script>
 <script type="text/javascript" src="../rules/treepath_test.js"></script>
+<!-- Sgf Tests -->
+<script type="text/javascript" src="../sgf/sgf_parser_test.js"></script>
 <!-- Controllers Tests -->
 <script type="text/javascript" src="../controllers/base_test.js"></script>
 <script type="text/javascript" src="../controllers/controllers_test.js"></script>
