--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -77,6 +77,7 @@
 <script type="text/javascript" src="../displays/gui/icon_bar.js"></script>
 <script type="text/javascript" src="../displays/gui/icons.js"></script>
 <script type="text/javascript" src="../displays/gui/position.js"></script>
+<script type="text/javascript" src="../displays/gui/split.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
@@ -131,6 +132,8 @@
 <script type="text/javascript" src="../rules/movetree_test.js"></script>
 <script type="text/javascript" src="../rules/properties_test.js"></script>
 <script type="text/javascript" src="../rules/treepath_test.js"></script>
+<!-- Sgf Tests -->
+<script type="text/javascript" src="../sgf/sgf_parser_test.js"></script>
 <!-- Controllers Tests -->
 <script type="text/javascript" src="../controllers/base_test.js"></script>
 <script type="text/javascript" src="../controllers/controllers_test.js"></script>
@@ -154,9 +157,9 @@ $(document).ready(function() {
   glift.displays.boardpointsTest();
   glift.displays.resizedBoxTest();
 
-  // TODO(kashomon): recreate the board tests.  Right now, the test relies on
-  // the old Raphael code
-  // glift.displays.boardTest();
+  // TODO(kashomon): recreate the board tests.
+
+  glift.sgf.parserTest();
 
   glift.rules.movetreeTest();
   glift.rules.movenodeTest();
