Added a new, handrolled parser that's much faster than the generated one.

--- a/src/htmltests/BboxFinder.html
+++ b/src/htmltests/BboxFinder.html
@@ -65,8 +65,8 @@
 <script type="text/javascript" src="../rules/treepath.js"></script>
 <!-- Sgf -->
 <script type="text/javascript" src="../sgf/sgf.js"></script>
+<script type="text/javascript" src="../sgf/parser.js"></script>
 <script type="text/javascript" src="../sgf/props.js"></script>
-<script type="text/javascript" src="../sgf/sgf_grammar.js"></script>
 <!-- Controllers -->
 <script type="text/javascript" src="../controllers/controllers.js"></script>
 <script type="text/javascript" src="../controllers/base.js"></script>
@@ -110,7 +110,7 @@
 <script type="text/javascript" src="../rules/properties_test.js"></script>
 <script type="text/javascript" src="../rules/treepath_test.js"></script>
 <!-- Sgf Tests -->
-<script type="text/javascript" src="../sgf/sgf_parser_test.js"></script>
+<script type="text/javascript" src="../sgf/parser_test.js"></script>
 <!-- Controllers Tests -->
 <script type="text/javascript" src="../controllers/base_test.js"></script>
 <script type="text/javascript" src="../controllers/controllers_test.js"></script>
