--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -15,6 +15,7 @@
 <script type="text/javascript" src="../util/colors.js"></script>
 <script type="text/javascript" src="../util/enums.js"></script>
 <script type="text/javascript" src="../util/errors.js"></script>
+<script type="text/javascript" src="../util/fastclick.js"></script>
 <script type="text/javascript" src="../util/id_generator.js"></script>
 <script type="text/javascript" src="../util/key_mappings.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
@@ -139,6 +140,7 @@
       <div id="glift_display1"></div>
       <div id="extra_info"></div>
       <script type="text/javascript">
+        FastClick.attach(document.body);
         gameViewer = glift.widgets.baseWidget({
           sgfString: testdata.gogameguru_commentary,
           theme: 'DEPTH',
