--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="../util/colors.js"></script>
 <script type="text/javascript" src="../util/enums.js"></script>
 <script type="text/javascript" src="../util/errors.js"></script>
+<script type="text/javascript" src="../util/fastclick.js"></script>
 <script type="text/javascript" src="../util/id_generator.js"></script>
 <script type="text/javascript" src="../util/key_mappings.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
@@ -138,6 +139,7 @@
       <div id="glift_display1"></div>
       <div id="extra_info"></div>
       <script type="text/javascript">
+        FastClick.attach(document.body);
         var basicProblem = glift.widgets.basicProblem({
           sgfStringList: [
               testdata.sgfs.complexproblem,
