--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -139,7 +139,7 @@
       <div id="glift_display1"></div>
       <div id="extra_info"></div>
       <script type="text/javascript">
-        FastClick.attach(document.body);
+        // FastClick.attach(document.body);
         var basicProblem = glift.widgets.basicProblem({
           sgfStringList: [
               testdata.sgfs.complexproblem,
